@@ -7,13 +7,17 @@ import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
+import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.Hashtable;
+import java.util.LinkedList;
+import java.util.List;
 import java.util.Properties;
 import java.util.logging.Logger;
 
 import org.meandre.core.logger.KernelLoggerFactory;
+import org.meandre.core.services.coordinator.CoordinatorServiceCallBack;
 import org.meandre.core.services.coordinator.logger.CoordinatorLoggerFactory;
 import org.meandre.core.utils.NetworkTools;
 
@@ -25,6 +29,9 @@ import org.meandre.core.utils.NetworkTools;
 public abstract class BackendAdapter 
 extends Thread {
 
+	/** The heartbeat update rate */
+	private static final String PROP_HEARTBEAT_RATE = "HEARTBEAT_RATE";
+
 	/** The server was just registered */
 	public static final String STATUS_INITIALIZED = "I";
 
@@ -33,9 +40,12 @@ extends Thread {
 	
 	/** The server was unregistered */
 	public static final String STATUS_UNREGISTERED = "U";
-	
+
 	/** The server was shutdown */
-	public static final String STATUS_SHUTDOWN = "D";
+	public static final String STATUS_SHUTDOWN = "S";
+
+	/** The server was assumed shutdown */
+	public static final String STATUS_DIRTY_SHUTDOWN = "D";
 
 	/** The database flavour property name */
 	public final static String DB = "DB";
@@ -54,15 +64,26 @@ extends Thread {
 
 	/** The constant to pull the create server information table query */
 	protected final static String QUERY_CREATE_SERVER_INFO_TABLE = "CREATE_SERVER_INFO_TABLE";
+	
+	/** The constant to pull the create server information table query */
+	protected final static String QUERY_CREATE_SERVER_PROPERTIES_TABLE = "CREATE_SERVER_PROPERTIES_TABLE";
 
 	/** The constant to pull the create server log table query */
 	protected final static String QUERY_CREATE_SERVER_LOG_TABLE = "CREATE_SERVER_LOG_TABLE";
 
+	protected final static String QUERY_INSERT_DEFAULT_SERVER_PROPERTIES = "INSERT_DEFAULT_SERVER_PROPERTIES";
+	
 	/** The constant to pull the drop server status table query */
 	protected final static String QUERY_DROP_SERVER_STATUS_TABLE = "DROP_SERVER_STATUS_TABLE";
 
 	/** The constant to pull the drop server information table query */
 	protected final static String QUERY_DROP_SERVER_INFO_TABLE = "DROP_SERVER_INFO_TABLE";
+
+	/** The constant to pull the drop server properties table query */
+	protected final static String QUERY_DROP_SERVER_PROPERTIES_TABLE = "DROP_SERVER_PROPERTIES_TABLE";
+
+	/** Gets the server properties */
+	protected final static String QUERY_GET_SERVER_PROPERTIES = "GET_SERVER_PROPERTIES";
 
 	/** The constant to pull the drop server log table query */
 	protected final static String QUERY_DROP_SERVER_LOG_TABLE = "DROP_SERVER_LOG_TABLE";
@@ -82,8 +103,17 @@ extends Thread {
 	/** The constant to pull the delete server status query */
 	protected final static String QUERY_UNREGISTER_SERVER_INFO = "DELETE_SERVER_INFO";
 	
-	/** The constant to pull the unreister log entry query */
+	/** The constant to pull the unregister log entry query */
 	protected final static String QUERY_UNREGISTER_SERVER_LOG = "LOG_SERVER_UNREGISTER";
+	
+	/** The constant to pull the query that marks out of sync servers */
+	protected final static String QUERY_MARK_OUTOFSYNC_SERVERS = "MARK_OUTOFSYNC_SERVERS";
+	
+	/** The constant to pull all the entries in the query table */
+	protected final static String QUERY_DUMP_LOG_ENTRIES = "DUMP_LOG_ENTRIES";
+	
+	/** he constant to pull the list the dead nodes */
+	protected final static String QUERY_LIST_DIRTY_NODES = "LIST_DIRTY_NODES";
 	
 	/** The connection to the data base backend */
 	private Connection conn = null;
@@ -108,9 +138,15 @@ extends Thread {
 
 	/** The update period for the thread process. */
 	private long lUpdatePeriod = 5000;
+	
+	/** The server properties */
+	private Properties propsServer = new Properties();
 
 	/** The logger to use */
 	private Logger log = null;
+
+	/** The coordinated service call back interface */
+	private CoordinatorServiceCallBack aspcbCallBack;
 	
 	/** Initialize the query map */
 	public BackendAdapter() {
@@ -130,9 +166,9 @@ extends Thread {
 	 * 
 	 * @param conn The connection to the backend store
 	 * @param iPort The port number where the coordinated service runs
-	 * @param sDesc
+	 * @param aspcb The service callback
 	 */
-	public void linkToService(Connection conn, int iPort, String sDesc) {
+	public void linkToService(Connection conn, int iPort, CoordinatorServiceCallBack aspcb ) {
 				
 		// Get the connection object and the transaction mode
 		try {
@@ -140,10 +176,11 @@ extends Thread {
 			this.bTransactional = !conn.getAutoCommit();
 			this.iPort = iPort;
 			this.sServerID = NetworkTools.getNumericIPValue()+Integer.toHexString(iPort).toUpperCase();
-			this.sDesc = sDesc;
+			this.sDesc = aspcb.getDescription();
+			this.aspcbCallBack = aspcb;
 
 			// Set the thread name
-			super.setName("COORD:"+sServerID);
+			super.setName("MCT:"+sServerID);
 			
 			log.info(sServerID+" linked to "+sDesc);
 			
@@ -159,6 +196,8 @@ extends Thread {
 			beashMap.put(this, beash);
 			Runtime.getRuntime().addShutdownHook(beash);
 		}
+		
+		// TODO load the properties
 	}
 	
 	/** Return the shutdown hook for this adapter.
@@ -184,8 +223,12 @@ extends Thread {
 			// Create the server info table
 			String sQueryCSIT = propQueryMapping.getProperty(QUERY_CREATE_SERVER_INFO_TABLE);
 			executeUpdateQuery(sQueryCSIT);
+
+			// Create the server properties table
+			String sQueryCSPT = propQueryMapping.getProperty(QUERY_CREATE_SERVER_PROPERTIES_TABLE);
+			executeUpdateQuery(sQueryCSPT);
 			
-			// Create the server info table
+			// Create the server log table
 			String sQueryCSLT = propQueryMapping.getProperty(QUERY_CREATE_SERVER_LOG_TABLE);
 			executeUpdateQuery(sQueryCSLT);
 			
@@ -193,6 +236,19 @@ extends Thread {
 			
 			// Commit the transaction
 			if ( bTransactional ) conn.commit();
+			
+			// Insert the default properties to the the properties table
+			try {
+				String sQueryCSPI = propQueryMapping.getProperty(QUERY_INSERT_DEFAULT_SERVER_PROPERTIES);
+				executeUpdateQuery(sQueryCSPI);
+				// Commit the transaction
+				if ( bTransactional ) conn.commit();
+			}
+			catch ( BackendAdapterException bae ) {
+				// Roll it back
+				if ( bTransactional ) conn.rollback();
+				log.warning("Default properties already defined. Skipping adding them again");
+			}
 			
 			log.fine(sServerID+" created schema");
 			
@@ -263,10 +319,14 @@ extends Thread {
 			// Drop the server status table
 			String sQueryCSST = propQueryMapping.getProperty(QUERY_DROP_SERVER_STATUS_TABLE);
 			executeUpdateQuery(sQueryCSST);
-			
+
 			// Drop the server info table
 			String sQueryCSIT = propQueryMapping.getProperty(QUERY_DROP_SERVER_INFO_TABLE);
 			executeUpdateQuery(sQueryCSIT);
+			
+			// Drop the server properties table
+			String sQueryCSPT = propQueryMapping.getProperty(QUERY_DROP_SERVER_PROPERTIES_TABLE);
+			executeUpdateQuery(sQueryCSPT);
 			
 			// Commit the transaction
 			if ( bTransactional ) conn.commit();
@@ -290,6 +350,31 @@ extends Thread {
 			}
 		}
 	}
+	
+
+	/** Loads the server propoerties the server to the backend store
+	 * 
+	 * @throws BackendAdapterException The server properties could not be retrieved
+	 */
+	private void updateServerPropertiesUncommited() throws BackendAdapterException {
+		
+		try {
+			String sQuery = propQueryMapping.getProperty(QUERY_GET_SERVER_PROPERTIES);
+			Statement stm = conn.createStatement();
+			ResultSet rs = stm.executeQuery(sQuery);
+			propsServer.clear();
+			while ( rs.next() ) {
+				propsServer.put(rs.getString(1), rs.getObject(2).toString());
+			}
+			// Update the properties
+			lUpdatePeriod = Long.parseLong(propsServer.getProperty(PROP_HEARTBEAT_RATE));
+		} catch (SQLException e) {
+			ByteArrayOutputStream baos = new ByteArrayOutputStream();
+			e.printStackTrace(new PrintStream(baos));
+			log.severe("Get server properties failed! "+baos.toString());
+		}
+	}
+	
 
 	/** Registers the server to the backend store
 	 * 
@@ -360,7 +445,7 @@ extends Thread {
 			String sQueryUCSS = propQueryMapping.getProperty(QUERY_UPDATE_SERVER_STATUS);
 			long lTimestamp = System.currentTimeMillis();
 			Object [] oaValuesUpdate = {
-					STATUS_RUNNING,
+					sStatus,
 					lTimestamp,
 					sServerID
 				};
@@ -399,39 +484,46 @@ extends Thread {
 		}
 	}
 
-	
+	/** Update the server status to the backend store
+	 * 
+	 * @param sStatus The status value to update
+	 * @throws BackendAdapterException The server could not be registered
+	 */
+	protected void updateDirtyServerStatusUncommitedTransaction( String sSID, String sStatus ) 
+	throws BackendAdapterException {
+		// Update the server status
+		String sQueryUCSS = propQueryMapping.getProperty(QUERY_UPDATE_SERVER_STATUS);
+		long lTimestamp = System.currentTimeMillis();
+		Object [] oaValuesUpdate = {
+				sStatus,
+				lTimestamp,
+				sSID
+			};
+			
+		executeUpdateQueryWithParams(sQueryUCSS, oaValuesUpdate);
+		log.fine(sServerID+" dirty updated "+sSID+" status");
+		
+		// Log the unregister operation
+		String sQueryLUO = propQueryMapping.getProperty(QUERY_UNREGISTER_SERVER_LOG);
+		Object [] oaValues = {
+				sSID
+			};
+		executeUpdateQueryWithParams(sQueryLUO, oaValues);
+		
+	}
+
 	/** Unregisters the server from the backend store
 	 * 
 	 * @throws BackendAdapterException The server could not be unregistered
 	 */
 	public void unregisterServer() throws BackendAdapterException {
-		
 		try {
+			unregisterServer(sServerID,STATUS_UNREGISTERED);
 			
-			// Get server ID
-			Object [] oaValues = {
-					sServerID
-				};
-			
-			// Update the server status before going down
-			updateServerStatus(STATUS_UNREGISTERED);
-			
-			// Log the unregister operation
-			String sQueryLUO = propQueryMapping.getProperty(QUERY_UNREGISTER_SERVER_LOG);
-			executeUpdateQueryWithParams(sQueryLUO, oaValues);
-				
-			// Delete the server status
-			String sQueryDCSS = propQueryMapping.getProperty(QUERY_UNREGISTER_SERVER_STATUS);
-			executeUpdateQueryWithParams(sQueryDCSS, oaValues);
-			
-			// Delete server information
-			String sQueryDCSI = propQueryMapping.getProperty(QUERY_UNREGISTER_SERVER_INFO);
-			executeUpdateQueryWithParams(sQueryDCSI, oaValues);	
-
 			// Commit the transaction
 			if ( bTransactional ) conn.commit();
 			
-			log.fine(sServerID+" unregistered himself");
+			log.fine(sServerID+" unregistered itself");
 						
 		} catch (SQLException e) {
 			ByteArrayOutputStream baos = new ByteArrayOutputStream();
@@ -449,6 +541,33 @@ extends Thread {
 				log.severe("Rollback operation failed! "+baos.toString());
 			}
 		}
+	}
+	
+	/** Unregisters the server from the backend store
+	 * 
+	 * @throws BackendAdapterException The server could not be unregistered
+	 */
+	protected void unregisterServer( String sID, String sStatus ) throws BackendAdapterException {
+					
+		// Get server ID
+		Object [] oaValues = {
+				sID
+			};
+		
+		// Update the server status before going down
+		updateServerStatus(sStatus);
+		
+		// Log the unregister operation
+		String sQueryLUO = propQueryMapping.getProperty(QUERY_UNREGISTER_SERVER_LOG);
+		executeUpdateQueryWithParams(sQueryLUO, oaValues);
+			
+		// Delete the server status
+		String sQueryDCSS = propQueryMapping.getProperty(QUERY_UNREGISTER_SERVER_STATUS);
+		executeUpdateQueryWithParams(sQueryDCSS, oaValues);
+		
+		// Delete server information
+		String sQueryDCSI = propQueryMapping.getProperty(QUERY_UNREGISTER_SERVER_INFO);
+		executeUpdateQueryWithParams(sQueryDCSI, oaValues);	
 	
 	}
 	
@@ -488,7 +607,34 @@ extends Thread {
 			throw new BackendAdapterException(e);
 		}
 	}
+	
+	/** Return a list of list with the results of select query in text form.
+	 * 
+	 * @param sQuery The query to run
+	 * @return The resulting list of lists of text
+	 * @throws BackendAdapterException Something when wrong running the select
+	 */
+	private List<List<String>> selectTextColumns (String sQuery ) throws BackendAdapterException {
+		List<List<String>> lstRes = new LinkedList<List<String>>();
+		try {
+			Statement pstm = conn.createStatement();
+			ResultSet rs = pstm.executeQuery(sQuery);
+			int iColCount = rs.getMetaData().getColumnCount();
+			
+			while(rs.next()) {
+				List<String> lstRow = new LinkedList<String>();
+				for( int j=1 ; j<=iColCount ; j++) { 
+					lstRow.add(rs.getString(j));
+				}
+				lstRes.add(lstRow);
+			}
+		} catch (SQLException e) {
+			throw new BackendAdapterException(e);
+		}
+		return lstRes;
+	}
 
+	
 	/** Returns the backend flavor. The flavor corresponds to the name of
 	 * the relational database backend used (e.g. Derby, MySQL, Oracle, etc.)
 	 * 
@@ -560,13 +706,57 @@ extends Thread {
 			// Sleep
 			try {
 				try {
+					updateServerPropertiesUncommited();
 					updateServerStatus(STATUS_RUNNING);
 				} catch (BackendAdapterException e) {
 					ByteArrayOutputStream baos = new ByteArrayOutputStream();
 					e.printStackTrace(new PrintStream(baos));
 					log.warning(sServerID+" deamon thread could not update its status. "+baos.toString());
 				}
-				
+								
+				if ( bNotDone )  {
+					// If smaller than a certain probability
+					// TODO: Get the probability update in
+					try {
+						// 1. run the update
+						
+						String sQueryUOS = propQueryMapping.getProperty(QUERY_MARK_OUTOFSYNC_SERVERS);
+						Object[] oaValues = { lUpdatePeriod };
+						executeUpdateQueryWithParams(sQueryUOS, oaValues);
+						
+						// Commit the transaction
+						if ( bTransactional ) conn.commit();
+						
+						// 2. ping dead guys
+						String sQueryLDS = propQueryMapping.getProperty(QUERY_LIST_DIRTY_NODES);
+						List<List<String>> lstDirty = selectTextColumns(sQueryLDS);
+						for ( List<String> lst:lstDirty )
+							if ( !aspcbCallBack.ping(lst.get(1), Integer.parseInt(lst.get(2)))) {
+								updateDirtyServerStatusUncommitedTransaction(lst.get(0),STATUS_DIRTY_SHUTDOWN);
+								log.info(sServerID+" unregistering "+lst.get(0)+" as dirty");
+							}
+								
+						// Commit the transaction
+						if ( bTransactional ) conn.commit();
+											
+					} catch (SQLException e) {
+						ByteArrayOutputStream baos = new ByteArrayOutputStream();
+						e.printStackTrace(new PrintStream(baos));
+						log.severe(sServerID+" Commit operation failed! "+baos.toString());
+					}
+					catch ( BackendAdapterException bae ) {
+						try {
+							// Roll it back
+							if ( bTransactional ) conn.rollback();
+						} catch (SQLException e) {
+							ByteArrayOutputStream baos = new ByteArrayOutputStream();
+							e.printStackTrace(new PrintStream(baos));
+							log.severe(sServerID+" Rollback operation failed! "+baos.toString());
+						}
+					}
+				}
+	
+				// Sleep
 				Thread.sleep(this.lUpdatePeriod);
 				
 			} catch (InterruptedException e) {
@@ -575,12 +765,6 @@ extends Thread {
 				log.warning(sServerID+" deamon thread was abruptly interrupted. "+baos.toString());
 			}
 			
-			// TODO Do something
-			if ( bNotDone )  {
-				// If smaller than a certain prob
-				// 1. run the update
-				// 2. ping dead guys
-			}
 		}
 		log.info("Coordinator "+super.getName()+" has stopped");
 		
